Make admin user details configurable, as opposed to static `admin` which has been used for username and password

--- a/helm/superset/templates/secret-env.yaml
+++ b/helm/superset/templates/secret-env.yaml
@@ -32,3 +32,8 @@ data:
     DB_USER: {{ .Values.supersetNode.connections.db_user | b64enc | quote }}
     DB_PASS: {{ .Values.supersetNode.connections.db_pass | b64enc | quote }}
     DB_NAME: {{ .Values.supersetNode.connections.db_name | b64enc | quote }}
+    ADMIN_USERNAME: {{ .Values.adminUser.username | b64enc | quote }}
+    ADMIN_FIRSTNAME: {{ .Values.adminUser.firstname | b64enc | quote }}
+    ADMIN_LASTNAME: {{ .Values.adminUser.lastname | b64enc | quote }}
+    ADMIN_EMAIL: {{ .Values.adminUser.email | b64enc | quote }}
+    ADMIN_PASSWORD: {{ .Values.adminUser.password | b64enc | quote }}
