Add default details for the admin user

--- a/helm/superset/values.yaml
+++ b/helm/superset/values.yaml
@@ -242,8 +242,8 @@ tolerations: []
 affinity: {}
 
 adminUser:
-  username:
-  firstname:
-  lastname:
-  email:
-  password:
+  username: "admin"
+  firstname: "Superset"
+  lastname: "Admin"
+  email: "admin@superset.com"
+  password: "admin"
