--- a/helm/superset/values.yaml
+++ b/helm/superset/values.yaml
@@ -50,8 +50,8 @@ image:
 
 service:
   type: NodePort
-  port: 80
-  targetPort: 8080
+  port: 8080
+  #targetPort: 8080
 
 ingress:
   enabled: false
@@ -235,15 +235,15 @@ redis:
   cluster:
     enabled: false
 
-nodeSelector: {}
-
-tolerations: []
-
-affinity: {}
-
 adminUser:
   username: "admin"
   firstname: "Superset"
   lastname: "Admin"
   email: "admin@superset.com"
   password: "admin"
+
+nodeSelector: {}
+
+tolerations: []
+
+affinity: {}
