--- a/helm/superset/index.yaml
+++ b/helm/superset/index.yaml
@@ -1,3 +1,57 @@
 apiVersion: v1
-entries: {}
-generated: "2020-11-15T17:15:12.717166+03:00"
+entries:
+  postgresql:
+  - apiVersion: v1
+    appVersion: 11.6.0
+    created: "2020-11-16T18:13:40.157932+03:00"
+    description: Chart for PostgreSQL, an object-relational database management system
+      (ORDBMS) with an emphasis on extensibility and on standards-compliance.
+    digest: 8cc6e4fb98c8fad13843b5d095045326bbc8bb1e985466939a8c01a9044ea7bb
+    engine: gotpl
+    home: https://www.postgresql.org/
+    icon: https://bitnami.com/assets/stacks/postgresql/img/postgresql-stack-110x117.png
+    keywords:
+    - postgresql
+    - postgres
+    - database
+    - sql
+    - replication
+    - cluster
+    maintainers:
+    - email: containers@bitnami.com
+      name: Bitnami
+    - email: cedric@desaintmartin.fr
+      name: desaintmartin
+    name: postgresql
+    sources:
+    - https://github.com/bitnami/bitnami-docker-postgresql
+    urls:
+    - charts/postgresql-8.1.4.tgz
+    version: 8.1.4
+  redis:
+  - apiVersion: v1
+    appVersion: 5.0.7
+    created: "2020-11-16T18:13:40.161264+03:00"
+    description: Open source, advanced key-value store. It is often referred to as
+      a data structure server since keys can contain strings, hashes, lists, sets
+      and sorted sets.
+    digest: a0b2b42241fa16f89c7219360310a457b53783bae7b9dd75389edb16179c0f80
+    engine: gotpl
+    home: http://redis.io/
+    icon: https://bitnami.com/assets/stacks/redis/img/redis-stack-220x234.png
+    keywords:
+    - redis
+    - keyvalue
+    - database
+    maintainers:
+    - email: containers@bitnami.com
+      name: Bitnami
+    - email: cedric@desaintmartin.fr
+      name: desaintmartin
+    name: redis
+    sources:
+    - https://github.com/bitnami/bitnami-docker-redis
+    urls:
+    - charts/redis-10.3.4.tgz
+    version: 10.3.4
+generated: "2020-11-16T18:13:40.151689+03:00"
