--- a/helm/superset/values.yaml
+++ b/helm/superset/values.yaml
@@ -80,27 +80,27 @@ resources: {}
 
 ##
 ## Superset node configuration
-# supersetNode:
-#   command:
-#     - "/bin/sh"
-#     - "-c"
-#     - ". {{ .Values.configMountPath }}/superset_bootstrap.sh; /usr/bin/docker-entrypoint.sh"
-#   connections:
-#     redis_host: '{{ template "superset.fullname" . }}-redis-headless'
-#     redis_port: "6379"
-#     db_host: '{{ template "superset.fullname" . }}-postgresql'
-#     db_port: "5432"
-#     db_user: superset
-#     db_pass: superset
-#     db_name: superset
-#   initContainers:
-#     - name: wait-for-postgres
-#       image: busybox:latest
-#       imagePullPolicy: IfNotPresent
-#       envFrom:
-#         - secretRef:
-#             name: '{{ tpl .Values.envFromSecret . }}'
-#       command: [ "/bin/sh", "-c", "until nc -zv $DB_HOST $DB_PORT -w1; do echo 'waiting for db'; sleep 1; done" ]
+supersetNode:
+  command:
+    - "/bin/sh"
+    - "-c"
+    - ". {{ .Values.configMountPath }}/superset_bootstrap.sh; /usr/bin/docker-entrypoint.sh"
+  connections:
+    redis_host: '{{ template "superset.fullname" . }}-redis-headless'
+    redis_port: "6379"
+    db_host: '{{ template "superset.fullname" . }}-postgresql'
+    db_port: "5432"
+    db_user: superset
+    db_pass: superset
+    db_name: superset
+  initContainers:
+    - name: wait-for-postgres
+      image: busybox:latest
+      imagePullPolicy: IfNotPresent
+      envFrom:
+        - secretRef:
+            name: '{{ tpl .Values.envFromSecret . }}'
+      command: [ "/bin/sh", "-c", "until nc -zv $DB_HOST $DB_PORT -w1; do echo 'waiting for db'; sleep 1; done" ]
 
 ##
 ## Init job configuration
