--- a/helm/superset/values.yaml
+++ b/helm/superset/values.yaml
@@ -50,8 +50,8 @@ image:
 
 service:
   type: NodePort
-  port: 8080
-  #targetPort: 8080
+  port: 80
+  targetPort: 8080
 
 ingress:
   enabled: false
