Troubleshooting Backend service

--- a/helm/superset/templates/deployment.yaml
+++ b/helm/superset/templates/deployment.yaml
@@ -53,7 +53,7 @@ spec:
           command: {{  tpl (toJson .Values.supersetNode.command) . }}
           env:
             - name: "SUPERSET_PORT"
-              value: {{ .Values.service.port | quote}}
+              value: {{ .Values.service.targetPort | quote}}
           {{ if .Values.extraEnv }}
             {{- range $key, $value := .Values.extraEnv }}
             - name: {{ $key | quote}}
