--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
       - apt-get -y install jq python3-pip mysql-server libmysqlclient-dev redis-server 
       - pip3 install --upgrade awscli
       - redis-server --daemonize yes
+      - services mysql start
 
   pre_build:
     commands:
