--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
       - git config --global pull.rebase false
       - apt-get update
-      - apt-get -y install jq python3-pip mysql-server libmysqlclient-dev redis-server 
+      - apt-get -y install jq python3-pip mysql-server libmysqlclient-dev redis-server libsasl2-dev
       - pip3 install --upgrade awscli
       - redis-server --daemonize yes
       - service mysql start
