--- a/tox.ini
+++ b/tox.ini
@@ -138,20 +138,20 @@ commands =
     {toxinidir}/superset-frontend/js_build.sh
 deps =
 
-[testenv:license-check]
-commands =
-    {toxinidir}/scripts/check_license.sh
-passenv = *
-whitelist_externals =
-    {toxinidir}/scripts/check_license.sh
-deps =
+; [testenv:license-check]
+; commands =
+;     {toxinidir}/scripts/check_license.sh
+; passenv = *
+; whitelist_externals =
+;     {toxinidir}/scripts/check_license.sh
+; deps =
 
-[testenv:pre-commit]
-commands =
-    pre-commit run --all-files
-deps =
-    -rrequirements/integration.txt
-skip_install = true
+; [testenv:pre-commit]
+; commands =
+;     pre-commit run --all-files
+; deps =
+;     -rrequirements/integration.txt
+; skip_install = true
 
 [testenv:pylint]
 commands =
@@ -173,8 +173,8 @@ envlist =
     cypress-sqllab-backend-persist
     eslint
     fossa
-    javascript
-    license-check
-    pre-commit
-    pylint
+    ; javascript
+    ; license-check
+    ; pre-commit
+    ; pylint
 skipsdist = true
