Debug pre-commit

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -42,6 +42,7 @@ phases:
       - export TAG=$REPOSITORY_BRANCH-v$TIMESTAMP
       - $(aws ecr get-login --no-include-email)
       - tox
+      - cat /root/.cache/pre-commit/pre-commit.log
 
   # build:
   #   commands:
