Debug pre-commit

--- a/tox.ini
+++ b/tox.ini
@@ -148,7 +148,7 @@ deps =
 
 [testenv:pre-commit]
 commands =
-    pre-commit install-hooks
+    git init
     pre-commit run --all-files
 deps =
     -rrequirements/integration.txt
