Debug pre-commit

--- a/tox.ini
+++ b/tox.ini
@@ -149,6 +149,7 @@ deps =
 [testenv:pre-commit]
 commands =
     git init
+    git diff
     pre-commit run --all-files
 deps =
     -rrequirements/integration.txt
