--- a/tox.ini
+++ b/tox.ini
@@ -146,14 +146,14 @@ whitelist_externals =
     {toxinidir}/scripts/check_license.sh
 deps =
 
-[testenv:pre-commit]
-commands =
-    git init
-    git diff
-    pre-commit run --all-files
-deps =
-    -rrequirements/integration.txt
-skip_install = true
+; [testenv:pre-commit]
+; commands =
+;     git init
+;     git diff
+;     pre-commit run --all-files
+; deps =
+;     -rrequirements/integration.txt
+; skip_install = true
 
 ; [testenv:pylint]
 ; commands =
