BTA-4825 debugging tox

--- a/tox.ini
+++ b/tox.ini
@@ -175,8 +175,8 @@ envlist =
     cypress-sqllab-backend-persist
     eslint
     fossa
-    javascript
-    license-check
+    ; javascript
+    ; license-check
     ; pre-commit
     ; pylint
 skipsdist = true
